fix books on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -48,7 +48,7 @@
  .landing-hero img.book-covers {
     width: 500px;
     position: absolute;
-    right: -5px;
+    right: 0px;
     bottom: -85px;
     z-index: 1;
     display: none;
